Fikset litt på stories så flere av statusene blir tatt med

--- a/src/stories/AvtaleStatuserDeltaker.mdx
+++ b/src/stories/AvtaleStatuserDeltaker.mdx
@@ -11,37 +11,38 @@ Deltaker har ikke statusen UFORDELT
 
 ## ANNULLERT
 
-Avtallen har blitt annullert
+Avtallen har blitt annullert av en veileder
 
 <Story of={DeltakerAvtaleStatuser.Annullert} />
 
 ## AVBRUTT
 
-Avtalen er blitt avbrutt
+Avtalen er blitt avbrutt av en veileder
 
 <Story of={DeltakerAvtaleStatuser.Avbrutt} />
 
 ## PÅBEGYNT
 
-avtale er påbegynt
+Avtale er påbegynt
+Dette skjer når en avtale har blitt tilknyttet en veileder
 
 <Story of={DeltakerAvtaleStatuser.Påbegynt} />
 
-## MANGLER_GODKJENNING
+## MANGLER GODKJENNING
 
 Avtale er godkjent av deltaker men mangler godkjenning fra arbeidsgiver
 
 <Story of={DeltakerAvtaleStatuser.ManglerGodkjenningDeltakerHarGodkjent} />
 
-## MANGLER_GODKJENNING
+## MANGLER GODKJENNING
 
 Avtale er ikke godkjent av deltaker
 
 <Story of={DeltakerAvtaleStatuser.ManglerGodkjenningDeltakerHarIkkeGodkjent} />
 
-## KLAR_FOR_OPPSTART
+## KLAR FOR OPPSTART
 
-Avtale er KlarForOppstart
+Avtale er Klar for oppstart
 
 <Story of={DeltakerAvtaleStatuser.KlarForOppstart} />
 
