--- a/src/stories/AvtaleStatuserMentor.mdx
+++ b/src/stories/AvtaleStatuserMentor.mdx
@@ -6,41 +6,43 @@ import * as MentorAvtaleStatuser from './AvtaleStatuserMentor.stories';
 
 # Status meldinger deltaker får men han går på tiltak
 
-De forskjellige statusene er
+De forskjellige statusene er ANNULLERT, AVBRUTT, PÅBEGYNT, MANGLER_GODKJENNING, KLAR_FOR_OPPSTART, GJENNOMFØRES og AVSLUTTET.
+Mentor har ikke statusen UFORDELT
 
 ## ANNULLERT
 
-Avtallen har blitt annullert
+Avtallen har blitt annullert av en veileder
 
 <Story of={MentorAvtaleStatuser.Annullert} />
 
 ## AVBRUTT
 
-Avtalen er blitt avbrutt
+Avtalen er blitt avbrutt av en veileder
 
 <Story of={MentorAvtaleStatuser.Avbrutt} />
 
 ## PÅBEGYNT
 
-avtale er påbegynt
+Avtale er påbegynt
+Dette skjer når en avtale har blitt tilknyttet en veileder
 
 <Story of={MentorAvtaleStatuser.Påbegynt} />
 
-## MANGLER_GODKJENNING
+## MANGLER GODKJENNING
 
-Avtale er godkjent av deltaker men mangler godkjenning fra arbeidsgiver
+Avtale har ikke blitt godkjent av de andre partene enda.
 
 <Story of={MentorAvtaleStatuser.ManglerGodkjenning} />
 
 ## KLAR_FOR_OPPSTART
 
-Avtale er KlarForOppstart
+Avtale er Klar for oppstart
 
 <Story of={MentorAvtaleStatuser.KlarForOppstart} />
 
 ## GJENNOMFØRES
 
-Avtalen Gjennomføres
+Avtalen gjennomføres
 
 <Story of={MentorAvtaleStatuser.Gjennomføres} />
 
