Ny mentor statuser (#1227)
* lagt til nye statuser for mentor

* AvtaleStatuserVeileder fix

* rettet opp i tekseter

--- a/src/stories/AvtaleStatuserVeileder.mdx
+++ b/src/stories/AvtaleStatuserVeileder.mdx
@@ -42,9 +42,21 @@ Avtale er godkjent av veileder men mangler godkjenning fra beslutter
 
 ## MANGLER GODKJENNING
 
-Avtale er godkjent av arbeidsgiver og deltaker men ikke Veileder
+Avtale er godkjent av arbeidsgiver og deltaker men mangler godkjenning fra mentor
 
-<Story of={VeilederAvtaleStatuser.ManglerGodkjenningDeltakerOgArbeidsgiverHarGodkjent} />
+<Story of={VeilederAvtaleStatuser.ManglerGodkjenningArbeidsgiverOgDeltakerHarGodkjentMenIkkeMentor} />
+
+## MANGLER GODKJENNING
+
+Avtale er godkjent av arbeidsgiver og deltaker og mentor hvis mentor avtale men ikke Veileder
+
+<Story of={VeilederAvtaleStatuser.ManglerGodkjenningDeltakerOgArbeidsgiverOgMentorHarGodkjent} />
+
+## MANGLER GODKJENNING
+
+Avtale er godkjent av deltaker men mangler godkjenning fra arbeidsgiver og signering av mentor
+
+<Story of={VeilederAvtaleStatuser.ManglerGodkjenningDeltakerHarGodkjentMenIkkeArbeidsgiverOgMentor} />
 
 ## MANGLER GODKJENNING
 
@@ -54,13 +66,25 @@ Avtale er godkjent av deltaker men mangler godkjenning fra arbeidsgiver
 
 ## MANGLER GODKJENNING
 
+Avtale er godkjent av arbeidsgiver men mangler godkjenning fra deltaker og mentor
+
+<Story of={VeilederAvtaleStatuser.ManglerGodkjenningArbeidsgiverHarGodkjentMenIkkeDeltakerogMentor} />
+
+## MANGLER GODKJENNING
+
 Avtale er godkjent av arbeidsgiver men mangler godkjenning fra deltaker
 
 <Story of={VeilederAvtaleStatuser.ManglerGodkjenningArbeidsgiverHarGodkjent} />
 
 ## MANGLER GODKJENNING
 
-Avtale er mangler godkjenning av arbeidsgiver og deltaker
+Avtale mangler godkjenning av arbeidsgiver, deltaker og mentor
+
+<Story of={VeilederAvtaleStatuser.ManglerGodkjenningArbeidsgiverOgDeltakerOgMentorHarIkkeGodkjent} />
+
+## MANGLER GODKJENNING
+
+Avtale mangler godkjenning av arbeidsgiver og deltaker
 
 <Story of={VeilederAvtaleStatuser.ManglerGodkjenningArbeidsgiverOgDeltakerHarIkkeGodkjent} />
 
