Mer granulerte "venter på X"-statuser
For deltaker og arbeidsgiver er statusen som vises
når man venter på at andre parter skal godkjenne
ikke spesifikk på om det er NAV eller deltaker/arbeidsgiver
vi faktisk venter på.

Denne endringen gjør at statusen mer tydelig viser om det
er deltaker/arbeidsgiver eller NAV man faktisk venter på,
eventuelt begge.

--- a/src/stories/AvtaleStatuserArbeidsgiver.mdx
+++ b/src/stories/AvtaleStatuserArbeidsgiver.mdx
@@ -44,16 +44,23 @@ Statusen når arbeidsgiver ikke har godkjent.
 ## MANGLER GODKJENNING
 
 Avtalen er ferdig fylt ut og mangler godkjenninger.
-Avtale er godkjent av arbeidsgiver men mangler godkjenning fra deltaker eller veileder
+Avtale er godkjent av arbeidsgiver men mangler godkjenning fra deltaker
 
-<Story of={ArbeidsgiverAvtaleStatuser.ManglerGodkjenningArbeidsgiverHarGodkjentMenIkkeDeltakerOgNAV} />
+<Story of={ArbeidsgiverAvtaleStatuser.ManglerGodkjenningArbeidsgiverHarGodkjentMenIkkeDeltaker} />
 
 ## MANGLER GODKJENNING
 
 Avtalen er ferdig fylt ut og mangler godkjenninger.
 Avtale er godkjent av arbeidsgiver og deltaker men mangler godkjenning fra veileder
 
-<Story of={ArbeidsgiverAvtaleStatuser.ManglerGodkjenningFraVeilederArbeidsgiverOgDeltakerHarGodkjent} />
+<Story of={ArbeidsgiverAvtaleStatuser.ManglerGodkjenningArbeidsgiverOgDeltakerHarGodkjentMenIkkeVeileder} />
+
+## MANGLER GODKJENNING
+
+Avtalen er ferdig fylt ut og mangler godkjenninger.
+Avtale er godkjent av arbeidsgiver men mangler godkjenning fra deltaker og veileder
+
+<Story of={ArbeidsgiverAvtaleStatuser.ManglerGodkjenningArbeidsgiverHarGodkjentMenIkkeDeltakerOgVeileder} />
 
 ## KLAR FOR OPPSTART
 
