--- a/src/stories/AvtaleStatuserDeltaker.mdx
+++ b/src/stories/AvtaleStatuserDeltaker.mdx
@@ -32,7 +32,19 @@ Dette skjer når en avtale har blitt tilknyttet en veileder
 
 Avtale er godkjent av deltaker men mangler godkjenning fra arbeidsgiver
 
-<Story of={DeltakerAvtaleStatuser.ManglerGodkjenningDeltakerHarGodkjent} />
+<Story of={DeltakerAvtaleStatuser.ManglerGodkjenningDeltakerHarGodkjentMenIkkeArbeidsgiver} />
+
+## MANGLER GODKJENNING
+
+Avtale er godkjent av deltaker men mangler godkjenning fra veileder
+
+<Story of={DeltakerAvtaleStatuser.ManglerGodkjenningDeltakerHarGodkjentMenIkkeVeileder} />
+
+## MANGLER GODKJENNING
+
+Avtale er godkjent av deltaker men mangler godkjenning fra arbeidsgiver og veileder
+
+<Story of={DeltakerAvtaleStatuser.ManglerGodkjenningDeltakerHarGodkjentMenIkkeArbeidsgiverOgVeileder} />
 
 ## MANGLER GODKJENNING
 
