Litt mer informasjon i story

--- a/src/stories/Adressesperre.mdx
+++ b/src/stories/Adressesperre.mdx
@@ -11,12 +11,23 @@ import * as IkkeTilgang403 from './IkkeTilgang403.stories';
 
 Følgende prinsipper er fulgt for å støtte brukere med adressesperre i løsningen:
 
-1. Vi minimerer mengden merking av brukere med adressesperre, for å unngå at de får stor oppmerksomhet
-2. Vi maskerer ikke informasjon, men bruker heller merking og varsler brukere om å utvise aktsomhet
+1. Brukere med adressesperre skal likebehandles med andre brukere
+2. Vi minimerer mengden merking for å redusere oppmerksomhet
+3. Tilgang er begrenset med tilgangskontroll
+   a. For Nav-veiledere brukes felles tilgangskontrollsystem
+   b. For arbeidsgiver brukes en altinn-rettighet som arbeidsgiver selv kan dele ut
+   c. I oversiktssiden over alle avtaler tilhørende en bedrift vil vi skjule avtaler man ikke har tilgang til
+   d. Ved direkte oppslag (søk på deltaker eller avtalenummer), informerer vi om tilgang er begrenset grunnet adressesperre
+4. Vi maskerer eller skjuler ikke informasjon, men bruker heller merking og varsler brukere om å utvise aktsomhet.
+   a. Vi har ikke informasjon om deltakers bostedsadresse i løsningen, men
+   b. informasjon om bedriften man jobber på er geolokaliserende
 
 ## Oversikten
 
-I oversiktssiden har vi en liten markør som indikerer om en deltaker har addresesperre:
+I oversiktssiden har vi en liten markør som indikerer om en deltaker har addresesperre. Man må ha tilstrekkelig tilgang for å kunne se disse deltakerne.
+Tilstrekkelig tilgang vil være styrt av standard tilgangskontroll for Nav-veileder, og en altinn-rettighet som arbeidsgiver kan tildele.
+
+Hvis man ikke har tilstrekkelig tilgang vil deltakeren være skjult i oversikten.
 
 <Story of={AvtaleOversikt.AvtaleTabellForArbeidsgiver} />
 
